--- a/src/styles/blur_list.css
+++ b/src/styles/blur_list.css
@@ -1,18 +1,21 @@
 .back {
-    background:linear-gradient(0deg, rgba(255,255,255, 0.6), rgba(255,255,255, 0.6)), url('https://wallpaperaccess.com/full/217097.jpg');
-
+    /* Really cool CSS3 transition shorthand */
+    /* https://stackoverflow.com/a/10983757 */
+    transition: background 0.1s linear;
     -webkit-filter: grayscale(100%);
     filter: grayscale(100%);
-    background-color: transparent;
 
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
 
-    
-
-    
+.overlay {
+    background: #fff;
+    opacity: 0.55;
+    width: 100%;
+    height: 100%
 }
 
 .list-heading {
