--- a/src/styles/blur_list.css
+++ b/src/styles/blur_list.css
@@ -9,7 +9,7 @@
 }
 
 .overlay {
-    background: #fff;
+    background: #000;
     opacity: 0.55;
     width: 100%;
     height: 100%
@@ -26,11 +26,11 @@
 
 .list-container:hover {
     color: transparent;
-    text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+    text-shadow: 0 0 20px rgba(0,0, 0, 0.9);
     position: absolute;
 }
 
 .li:hover {
-    color: black;
+    color: white;
     text-shadow: none;
 }
