White Flicker Fixed
- Previous mouse tracking library depended on react hooks useEffect/useState which would rerender the referenced component every time they updated the mouse posisiton
- switched dependency to js's default mouse tracking (event.clientY, event.clientX) which updates data rather than rerendering state

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,13 @@
+html {
+  cursor: url('https://www.pngkit.com/png/full/44-440751_transparent-triangle-white-white-triangle-png.png');
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+  cursor: url('https://www.pngkit.com/png/full/44-440751_transparent-triangle-white-white-triangle-png.png');
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
